<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="media" translatable="false">Media</string>
    <string name="description" translatable="false">Description</string>
    <string name="surface" translatable="false">Surface</string>
    <string name="number_of_rooms">Rooms</string>
    <string name="number_of_bathrooms">Bathrooms</string>
    <string name="number_of_bedrooms">Bedrooms</string>
    <string name="location">Location</string>
    <string name="connection_succeed" translatable="false">connection successful</string>
    <string name="error_no_internet">error check your internet connection</string>
    <string name="error_unknown_error">unknown error</string>
    <string name="error_authentication_canceled">error authentication cancel</string>
    <string name="open_drawer" translatable="false">Open navigation drawer</string>
    <string name="close_drawer" translatable="false">Close navigationdrawer</string>
    <string name="logo" translatable="false">logo</string>
    <string name="address">address</string>
    <string name="create">create</string>
    <string name="no_picture_found">no picture found</string>
    <string name="estatePhoto" translatable="false">estatePhoto</string>
    <string name="price">Price</string>
    <string name="type" translatable="false">Type</string>
    <string name="dollar" translatable="false">$</string>
    <string name="picture_name">Picture name</string>
    <string name="add_picture">Add picture</string>
    <string name="save">save</string>
    <string name="postal_code">postal code</string>
    <string name="city">city</string>
    <string name="sold_out">sold</string>
    <string name="date">entry date :</string>
    <string name="sold">sold</string>
    <string name="manager">manager :</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="user_logout">user log out</string>
    <string name="no_username">no username found</string>
    <string name="no_email">no email found</string>
    <string name="sold_on">Sold on</string>
    <string name="update">update</string>
    <string name="title_activity_settings">Settings</string>
    <string name="update_username">update username</string>
    <string name="new_username">new username</string>
    <string name="update_username_success">username successfully updated to</string>
    <string name="updateUsernameError">the new username should be bigger than 2 characters</string>
    <string name="new_email">new email</string>
    <string name="update_email">update email</string>
    <string name="update_email_success">email successfully updated to</string>
    <string name="updateEmailError">please enter a valid address email</string>
    <string name="select_picture">you need to select a picture</string>
    <string name="enter_picture_name">you need to enter a picture name</string>
    <string name="add_picture_error">You must add at least one picture</string>
    <string name="main_picture_error">You must choose a main picture</string>
    <string name="select_estate_edit">you need to select an estate to edit</string>
    <string name="map_request_error">You can\'t make map request</string>
    <string name="unable_get_location">Unable to get current location have you enable localisation on your device ?
    </string>
    <string name="map">map</string>
    <string name="currency">currency :</string>
    <string name="euro" translatable="false">€</string>
    <string name="dollar_title" translatable="false">dollar $</string>
    <string name="euro_title" translatable="false">euro €</string>
    <string name="mini" translatable="false">mini</string>
    <string name="maxi" translatable="false">maxi</string>
    <string name="area">area</string>
    <string name="picture">picture</string>
    <string name="poi" translatable="false">poi</string>
    <string name="sold_date">sold date :</string>
    <string name="_02_02_2019" translatable="false">02/02/2019</string>
    <string name="add_poi">add poi</string>
    <string name="no_result_found">no result found</string>
    <string name="real_estate_n_manager" translatable="false">Real estate manager</string>
    <string name="notification">notification</string>
    <string name="notificationText">new estate successfully created</string>
    <string name="loan_sim">loan simulator</string>
    <string name="loan_amount">Loan amount</string>
    <string name="contribution">contribution</string>
    <string name="rate_in">rate in %</string>
    <string name="loan_term_in_years">loan term in years</string>
    <string name="calculate">calculate</string>
    <string name="monthly_payments">Monthly Payments :</string>
    <string name="total_interest_paid">"Total Investment : "</string>
    <string name="sale_date_error">error check your sale date</string>
    <string name="data_insert_error">error inserting data</string>
    <string name="verify_data">verify your data</string>

    <string-array name="typeArray">
        <item>"Apt"</item>
        <item>"Loft"</item>
        <item>"House"</item>
        <item>"PentHouse"</item>
        <item>"Mansion"</item>
        <item>"Flat"</item>
        <item>"Studio"</item>
        <item>"Other"</item>
    </string-array>
    <string-array name="poiArray">
        <item>"school"</item>
        <item>"hospital"</item>
        <item>"restaurant"</item>
        <item>"shopping"</item>
        <item>"banks"</item>
        <item>"sport"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>

</resources>
