<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="loanSimViewModel" type="ltd.kaizo.realestatemanager.controller.ui.loan.LoanSimViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/activity_loan_coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/activity_loan_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:theme="@style/ToolBarStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                    android:id="@+id/activity_loan_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/loanEditText"
                    android:hint="@string/loan_amount"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_toolbar"/>
            <EditText
                    android:id="@+id/activity_loan_contribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/loanEditText"
                    android:hint="@string/contribution"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_amount"/>
            <EditText
                    android:id="@+id/activity_loan_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/loanEditText"
                    android:hint="@string/rate_in"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_contribution"/>
            <EditText
                    android:id="@+id/activity_loan_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/loanEditText"
                    android:hint="@string/loan_term_in_years"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_rate"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_loan_calculate_btn"
                    android:layout_width="wrap_content"
                    style="@style/ButtonMaterialStyleBlue"
                    android:text="@string/calculate"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/activity_loan_term"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:id="@+id/activity_loan_monthly_payments_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bigTitleTextView"
                    android:text="@string/monthly_payments"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_calculate_btn"/>
            <TextView
                    android:id="@+id/activity_loan_monthly_payments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bigTitleTextView"
                    tools:text="15.9"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_calculate_btn"
                    app:layout_constraintStart_toEndOf="@+id/activity_loan_monthly_payments_title"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
 <TextView
                    android:id="@+id/activity_loan_total_interest_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bigTitleTextView"
                    android:text="@string/total_interest_paid"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_monthly_payments_title"/>
            <TextView
                    android:id="@+id/activity_loan_total_interest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bigTitleTextView"
                    tools:text="15.9"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/activity_loan_monthly_payments"
                    app:layout_constraintStart_toEndOf="@+id/activity_loan_monthly_payments_title"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
