<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.ui.detail.DetailFragment">


    <TextView
            android:id="@+id/fragment_detail_media_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
    />
    <HorizontalScrollView
            android:id="@+id/fragment_detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_media_textview"
            android:layout_marginTop="12dp">

    </HorizontalScrollView>
    <TextView
            android:id="@+id/fragment_detail_description_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_media_textview"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_scrollview"/>
    <TextView
            android:id="@+id/fragment_detail_description_textview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_description_title_textview"/>
    <TextView
            android:id="@+id/fragment_detail_surface_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surface"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_surface_ic"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_add_surface_ic"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_nb_room_title_textview"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_nb_room_title_textview"/>
    <TextView
            android:id="@+id/fragment_detail_surface_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="750 sqm"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_surface_title_textview"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_surface_title_textview"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_surface_title_textview"/>
    <TextView
            android:id="@+id/fragment_detail_nb_room_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_rooms"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_house_ic"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_add_house_ic"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/fragment_add_house_ic"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/fragment_detail_nb_room_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_nb_room_title_textview"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_nb_room_title_textview"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_nb_room_title_textview"/>
    <TextView
            android:id="@+id/fragment_detail_nb_bathroom_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_bathrooms"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_bathroom_ic"
            app:layout_constraintStart_toEndOf="@+id/fragment_add_bathroom_ic" android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/fragment_detail_nb_bathroom_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_nb_room_textview"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_nb_room_textview"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_nb_bathroom_title_textview"
    />
    <TextView
            android:id="@+id/fragment_detail_nb_bedroom_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_bedrooms"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_bedroom_ic"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_add_bedroom_ic"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/fragment_add_bedroom_ic" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_nb_bathroom_title_textview"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:id="@+id/fragment_detail_nb_bedroom_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_nb_room_textview"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_nb_bedroom_title_textview"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_nb_room_textview"/>
    <TextView
            android:id="@+id/fragment_detail_location_textview"
            android:layout_width="136dp"
            android:layout_height="63dp"
            tools:text="740 Park Avenue Apt6/7A NEW YORK"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_map_container"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_map_container"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_location_title_textview"
    />

    <ImageView
            android:id="@+id/fragment_add_surface_ic"
            android:src="@drawable/ic_surface_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_description_textview"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_description_textview"/>
    <ImageView
            android:id="@+id/fragment_add_house_ic"
            android:src="@drawable/ic_house_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_surface_ic"
            app:layout_constraintStart_toStartOf="@+id/fragment_add_surface_ic"
            app:layout_constraintEnd_toEndOf="@+id/fragment_add_surface_ic"/>
    <ImageView
            android:id="@+id/fragment_add_bedroom_ic"
            android:src="@drawable/ic_bedroom_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/fragment_add_bathroom_ic"
            app:layout_constraintEnd_toEndOf="@+id/fragment_add_bathroom_ic" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_bathroom_ic"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:id="@+id/fragment_detail_map_container"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_location_textview"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_nb_bedroom_title_textview"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.552"/>
    <ImageView
            android:id="@+id/fragment_add_location_ic"
            android:src="@drawable/ic_location_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_surface_ic"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_add_surface_ic"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/fragment_detail_location_textview"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_map_container"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/fragment_add_location_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_location_ic"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_add_location_ic"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_location_textview"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_location_textview"/>
    <ImageView
            android:id="@+id/fragment_add_bathroom_ic"
            android:src="@drawable/ic_bathroom_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/fragment_add_house_ic"
            app:layout_constraintEnd_toEndOf="@+id/fragment_add_house_ic" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/fragment_add_house_ic"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="555dp"
            android:id="@+id/fragment_detail_price" app:layout_constraintStart_toStartOf="@+id/fragment_add_bedroom_ic"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_nb_bedroom_title_textview"
            android:layout_marginEnd="8dp" tools:text="300000"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    <TextView
            android:text="$"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragement_detail_currency"
            app:layout_constraintTop_toTopOf="@+id/fragment_detail_price"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_price"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/fragment_detail_price"
            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

</androidx.constraintlayout.widget.ConstraintLayout>
